--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/variables.custom.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/variables.custom.less
@@ -23,3 +23,8 @@
 @btnWarningColor:					@var_BtnWarningColor;
 @btnDangerColor:					@var_BtnDangerColor;
 @btnInverseColor:					@var_BtnInverseColor;
+
+//productfilter
+@productFilter:                     @var_ProductFilterBackgroundColor;
+@checkoutProgress:                  @var_CheckoutProgressBackgroundColor;
+@alternateListItem:                 @var_AlternateListItemBackgroundColor;
