--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Views/Shared/ConfigureTheme.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Views/Shared/ConfigureTheme.cshtml
@@ -225,6 +225,11 @@
         @ThemeVarEditor("DropdownLinkColorActive")
         @ThemeVarEditor("DropdownLinkBackgroundActive")
         @ThemeVarEditor("DropdownLinkBackgroundHover")
+
+        @ThemeVarEditor("ProductFilterBackgroundColor", "Product Filter")
+        @ThemeVarEditor("CheckoutProgressBackgroundColor", "Checkout Progress Bar")
+        @ThemeVarEditor("AlternateListItemBackgroundColor", "Alternate List Item")
+
     </table>
 }
 
