Perf: Added IWidgetSelector interface which does the job of WidgetController.WidgetsByZone now (the action was executed too often for empty zones, now it get's executed only when widgets should be rendered).

--- a/src/Presentation/SmartStore.Web/Views/Widget/WidgetsByZone.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Widget/WidgetsByZone.cshtml
@@ -1,5 +1,6 @@
-﻿@model List<RenderWidgetModel>
-@using SmartStore.Web.Models.Cms;
+﻿@model IEnumerable<WidgetRouteInfo>
+@using SmartStore.Web.Framework.UI;
+
 @foreach (var widget in Model) {
     @Html.Action(widget.ActionName, widget.ControllerName, widget.RouteValues)
 }
