Fixed a warning cause of missing string resource in feed plugins

--- a/src/Plugins/Feed.ElmarShopinfo/Views/FeedElmarShopinfo/Configure.cshtml
+++ b/src/Plugins/Feed.ElmarShopinfo/Views/FeedElmarShopinfo/Configure.cshtml
@@ -112,7 +112,7 @@
         <td class="adminData">
 			@Html.DropDownList("BuildDescription", new List<SelectListItem> {
 				new SelectListItem { Text = T("Plugins.Feed.ElmarShopinfo.Automatic"), Value = "" },		
-				new SelectListItem { Text = T("Plugins.Feed.ElmarShopinfo.NoSpec"), Value = PluginHelperBase.NotSpecified },	
+				new SelectListItem { Text = T("Common.Unspecified"), Value = PluginHelperBase.NotSpecified },	
 				new SelectListItem { Text = T("Plugins.Feed.ElmarShopinfo.DescShort"), Value = "short" },
 				new SelectListItem { Text = T("Plugins.Feed.ElmarShopinfo.DescLong"), Value = "long" },
 				new SelectListItem { Text = T("Plugins.Feed.ElmarShopinfo.DescTitleAndShort"), Value = "titleAndShort" },
