Resolved #114: Runtime error occurs after new customer registration in the storefront

--- a/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
@@ -35,7 +35,7 @@
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
     <meta name="description" content="@(Html.SmartMetaDescription())" />
     <meta name="keywords" content="@(Html.SmartMetaKeywords())" />
-    <meta name="generator" content="SmartStore.NET" />
+    <meta name="generator" content="SmartStore.NET @SmartStoreVersion.CurrentFullVersion" />
 
     @*This is used so that themes can inject content into the header*@
     @Html.Partial("Head")
