--- a/src/Presentation/SmartStore.Web/Administration/Views/Common/SystemInfo.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Common/SystemInfo.cshtml
@@ -88,6 +88,14 @@
     </tr>
     <tr>
         <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.DatabaseSize)
+        </td>
+        <td class="adminData">
+			@("{0:0.00}".FormatWith(Model.DatabaseSize)) MB
+        </td>
+    </tr>
+    <tr>
+        <td class="adminTitle">
             @Html.SmartLabelFor(model => model.LoadedAssemblies)
         </td>
         <td class="adminData">
