--- a/src/Presentation/SmartStore.Web/Administration/Views/Store/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Store/_CreateOrUpdate.cshtml
@@ -78,6 +78,15 @@
 	</tr>
 	<tr>
 		<td class="adminTitle">
+			@Html.SmartLabelFor(model => model.HtmlBodyId)
+		</td>
+		<td class="adminData">
+			@Html.EditorFor(model => model.HtmlBodyId)
+			@Html.ValidationMessageFor(model => model.HtmlBodyId)
+		</td>
+	</tr>
+	<tr>
+		<td class="adminTitle">
 			@Html.SmartLabelFor(model => model.DisplayOrder)
 		</td>
 		<td class="adminData">
