--- a/src/Presentation/SmartStore.Web/Views/Shared/LanguageAttributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/LanguageAttributes.cshtml
@@ -1,5 +1,6 @@
-﻿@if (this.ShouldUseRtlTheme())
+﻿lang="@(this.WorkContext.WorkingLanguage.UniqueSeoCode)"
+@if (this.ShouldUseRtlTheme())
 {
-    <text>dir="rtl"</text>
+    <text> dir="rtl"</text>
     //<text>dir="rtl" xml:lang="he" lang="he"</text>
 }
