#36 Slider causes some elements (see footer) to shake slightly

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -626,6 +626,10 @@ nav ul, nav li {
 	}
 }
 
+#footer .row-fluid {
+    -webkit-transform: translateZ(0);
+}
+
 #footer .footer-seals .content,
 #footer .footer-social .content,
 #footer .theme-selector .content {
