ContentSlider minor fix

--- a/src/Presentation/SmartStore.Web/Views/Home/ContentSlider.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Home/ContentSlider.cshtml
@@ -18,7 +18,7 @@
 }
 
 @{
-    var isActive = Model.IsActive && Model.Slides.Count > 0;
+    var isActive = Model.IsActive && Model.Slides.Where(x => x.Published).Any();
 
     if (isActive) 
     {
