Added the ability to set multiple *favicons* depending on stores and/or themes

--- a/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Root.Head.cshtml
@@ -59,7 +59,7 @@
     @Html.CanonicalUrls()
     @Html.Action("RssHeaderLink", "News")
     @Html.Action("RssHeaderLink", "Blog")
-    @*Favicon - upload favicon.ico file to the root directory*@
+    @*Favicon - upload favicon.ico or favicon-[StoreId].ico file either to the root web or your theme directory*@
     @Html.Action("Favicon", "Common")
     @if (displayMiniProfiler)
     {
