--- a/src/Presentation/SmartStore.Web/Administration/Views/Store/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Store/_CreateOrUpdate.cshtml
@@ -94,4 +94,15 @@
 			@Html.ValidationMessageFor(model => model.DisplayOrder)
 		</td>
 	</tr>
+    @if (Model.Id > 0)
+    {
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.Id)
+            </td>
+            <td class="adminData">
+                <span>@Model.Id</span>
+            </td>
+        </tr>
+    }
 </table>
