--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1237,7 +1237,7 @@ fieldset > legend {
 	font-weight: @pageTitleFontWeight;
 	font-size: 20px;
 	line-height: 28px;
-	margin-bottom: 12px;
+	//margin-bottom: 12px;
 	padding-bottom: 8px;
 	border-bottom: 1px solid @var_SimpleBoxHeaderColor;
 
