--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -19,6 +19,10 @@
 .o90 								{ opacity: .9; filter: Alpha(Opacity=90) }
 .o100 								{ opacity: 1; filter:  Alpha(Opacity=100) }
 
+.al	                                { text-align: left !important;}
+.ac	                                { text-align: center !important;}
+.ar	                                { text-align: right !important;}
+
 
 // NICER PAGE TITLES & TYPO STUFF
 // ------------------------------
